--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </div>
 </body>
 
-<script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+<script src="./jquery.min.js"></script>
 <script type="text/javascript">
     function Vector(x, y) {
         this.x = x;
